Fix font issue with datatables and align some more stuff

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -1,5 +1,14 @@
+.navbar{
+  border-radius: 0;
+}
+
 .top_navbar{
   & li{
     display: inline-block;
   }
+}
+
+.main-footer{
+  min-height: 50px;
+  margin-top: 100px;
 }
